log/sensebreast.log
  File "/home/pi/sensebreast/sensing-scripts/sensor-complete.py", line 53
    <<<<<<< HEAD
     ^
SyntaxError: invalid syntax
